# komajdon

./: .env.example  .gitignore  Makefile  README.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  setup_shop.py
.github/workflows/: tests.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: cache.py  config.py  database.py  exceptions.py  main.py  middleware.py  utils.py  websocket.py
backend/app/auth/: deps.py  jwt.py  permissions.py  projects.py
backend/app/routes/: aggregations.py  api_keys.py  auth.py  compositions.py  discover.py  dynamic.py  files.py  models.py  pipelines.py  projects.py  rate_limits.py  realtime.py  roles.py  sdk.py
backend/app/schemas/: composition.py  model_schema.py  project.py  user.py
backend/app/static/: admin.html  app.js  style.css
backend/shared/: stage_builders.py
backend/tests/: conftest.py  run_all.py  test_auth.py  test_compositions.py  test_dynamic.py  test_roles.py  test_sdk.py  test_storage.py
docs/: CONTRIBUTING.md  DEVELOPMENT.md  FEATURES.md  LICENSE
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useRealtime.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: aggregations.tsx  api-composer.tsx  api-keys.tsx  dashboard.tsx  data-explorer.tsx  login.tsx  model-builder.tsx  model-detail.tsx  projects.tsx  rate-limits.tsx  roles.tsx  settings.tsx  storage.tsx  users.tsx
frontend/src/services/: api.ts  socket.ts
(+18 files in other folders)
