[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "komajdon-backend"
version = "0.0.1"
description = "Visual Backends for MongoDB — Just Point & Click"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "motor==3.7.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.20",
    "websockets==15.0",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".."]

[tool.coverage.run]
source = ["app"]
